change order of products and lessons added
